--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.map.resource.pointsofinterest"
+        applicationId "com.example.map_resource_locator"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -31,31 +31,63 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        //kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion = compose_version
+        //kotlinCompilerVersion '1.6.10'
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            exclude "**/attach_hotspot_windows.dll"
+            exclude "META-INF/licenses/**"
+            exclude "META-INF/LICENSE**"
+        }
+    }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
         }
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    // HTTP REST client
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    // Jackson deserializer
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0'
+    // Google Maps
+    implementation  "com.google.maps.android:maps-compose:2.1.0"
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    // Compose runtime
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
+
+
+    testImplementation 'io.kotest:kotest-runner-junit5:5.2.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0-alpha08"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$testing_version"
+    androidTestImplementation 'io.kotest:kotest-runner-junit5:5.2.3'
+    androidTestImplementation 'junit:junit:4.13.2'
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
