--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_version = '1.2.0-alpha08'
+        testing_version = "1.6.20"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20"
+    }
 }
 
 task clean(type: Delete) {
