--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.map_resource_locator"
+        applicationId "com.example.pointsofinterest"
         minSdk 21
         targetSdk 32
         versionCode 1
